# cool_halls

./: CMakeLists.txt  README.md  build_all_3rd_party.sh
cmake/: os.cmake
cmake/modules/: FindSingularity.cmake
containers/docker/: Dockerfile  Makefile  README.md  config.env
containers/singularity/: Singularity
src/: analyzer.in  hcana.in  hcana.singularity.in  root-config.in  root.in  rootls.in
